--- a/requirements.org
+++ b/requirements.org
@@ -38,9 +38,9 @@
 
 ** Requirements
    
-   - [ ] Implement the AJAX Javascript parts in the HTML file static/index.htm
-   - [ ] Implement the webservice root
-   - [ ] Implement the webservice /entity/entity-name POST/PUT/GET API
+   - [x] Implement the AJAX Javascript parts in the HTML file static/index.htm
+   - [x] Implement the webservice root
+   - [x] Implement the webservice /entity/entity-name POST/PUT/GET API
    - [ ] Implement the webservice /world API
    - [ ] Implement the webservice /clear API
    - [ ] Use JSON or XML to communicate (no plain text!)
